--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
+    "export": "next build",
+    "deploy": "npm run export && echo. > out/.nojekyll",
     "start": "next start",
     "lint": "next lint",
     "optimize": "npm run build:analyze && npm run lint"
