--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "optimize": "npm run build:analyze && npm run lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "^14.2.31",
     "react": "^18",
     "react-dom": "^18"
